--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,6 @@
 .idea
 *.iml
 *.orig
-.build-harness
-build-harness
 *.ini
 *~HEAD
 *backup
@@ -18,3 +16,4 @@ lambda
 *~HEAD
 *backup
 *.bak
+.terraform.lock.hcl
