--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,10 @@
 ---
 # yamllint disable rule:line-length
 default_language_version:
-  python: python3
+  python: python3.8
 repos:
   - repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v3.4.0
     hooks:
       - id: check-json
       - id: check-merge-conflict
@@ -29,7 +29,7 @@ repos:
       - id: shell-lint
         exclude: templates/
   - repo: git://github.com/igorshubovych/markdownlint-cli
-    rev: v0.24.0
+    rev: v0.26.0
     hooks:
       - id: markdownlint
   - repo: git://github.com/adrienverge/yamllint
@@ -45,6 +45,7 @@ repos:
     rev: v0.1.33
     hooks:
       - id: terraform-fmt
+        language_version: python3.8
       - id: checkov-scan
         language_version: python3.8
       - id: tf2docs
